--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
 management:
   endpoint.prometheus.enabled: true
   endpoints.web.exposure.include: prometheus, health
+no.nav.security.jwt.issuer.sts:
+  discoveryUrl: http://security-token-service/.well-known/openid-configuration
+  accepted_audience: preprod.local,srvpensjon
