--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,11 +1,15 @@
 spring:
-    datasource:
-        url: jdbc:h2:mem:testdb;Mode=Oracle
-        driverClassName: org.h2.Driver
-        continue-on-error: true
-        initialization-mode: embedded
-    jpa:
-        database-platform: org.hibernate.dialect.Oracle10gDialect
-        hibernate.ddl-auto: none
-        show-sql: false
+  datasource:
+    url: jdbc:h2:mem:testdb;Mode=Oracle
+    driverClassName: org.h2.Driver
+    continue-on-error: true
+    initialization-mode: embedded
+  jpa:
+    database-platform: org.hibernate.dialect.Oracle10gDialect
+    hibernate.ddl-auto: none
+    show-sql: false
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils: DEBUG
+no.nav.security.jwt.issuer.iss-localhost:
+  discoveryUrl: http://localhost/local/metadata
+  accepted_audience: aud-localhost
+  validation.optional_claims: sub,aud
