--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -20,8 +20,8 @@ jobs:
         run: gradle clean build
 
       # Build image
-          - name: Create tag
-            run: echo "::set-env name=TAG::$(date "+%Y.%m.%d")-$(git rev-parse --short HEAD)"
+      - name: Create tag
+        run: echo "::set-env name=TAG::$(date "+%Y.%m.%d")-$(git rev-parse --short HEAD)"
       - name: Build and push docker image
         uses: docker/build-push-action@v1.1.0
         with:
@@ -31,7 +31,7 @@ jobs:
           repository: navikt/pensjon-pol-innsyn-tp/pensjon-pol-innsyn-tp
           tags: ${{ env.TAG }}
 
-      # Deploy to dev-fss
+      # Deploy to dev-gcp
       - name: Deploy to dev-gcp
         uses: nais/deploy/actions/deploy@v1
         env:
