--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -31,12 +31,12 @@ jobs:
           repository: navikt/pensjon-pol-innsyn-tp/pensjon-pol-innsyn-tp
           tags: ${{ env.TAG }}
 
-      # Deploy to dev-gcp
-      - name: Deploy to dev-gcp
+      # Deploy to dev-fss
+      - name: Deploy to dev-fss
         uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: dev-gcp
+          CLUSTER: dev-fss
           RESOURCE: .nais/nais-dev.yaml
           IMAGE: docker.pkg.github.com/navikt/pensjon-pol-innsyn-tp/pensjon-pol-innsyn-tp:${{ env.TAG }}
           TEAM: pensjonsamhandling
