Add initialDelay to troubleshoot deploy

--- a/.nais/nais-dev.yaml
+++ b/.nais/nais-dev.yaml
@@ -12,8 +12,10 @@ spec:
     - https://pensjon-pol-innsyn-tp.nais.preprod.local
   liveness:
     path: actuator/health/liveness
+    initialDelay: 30
   readiness:
     path: actuator/health/readiness
+    initialDelay: 30
   vault:
     enabled: true
     paths:
