--- a/.nais/nais-prod.yaml
+++ b/.nais/nais-prod.yaml
@@ -19,6 +19,8 @@ spec:
     paths:
       - mountPath: /secrets/oracle/tp-registeret
         kvPath: oracle/data/prod/creds/tjenestepensjon-user
+      - mountPath: /secrets/oracle/config
+        kvPath: oracle/data/dev/config/tjenestepensjon
   replicas:
     min: 1
     max: 1
