--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -40,3 +40,13 @@ jobs:
           RESOURCE: .nais/nais-dev.yaml
           IMAGE: docker.pkg.github.com/navikt/pensjon-pol-innsyn-tp/pensjon-pol-innsyn-tp:${{ env.TAG }}
           TEAM: pensjonsamhandling
+
+      # Deploy to prod-fss
+      - name: Deploy to prod-fss
+        uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-fss
+          RESOURCE: .nais/nais-prod.yaml
+          IMAGE: docker.pkg.github.com/navikt/pensjon-pol-innsyn-tp/pensjon-pol-innsyn-tp:${{ env.TAG }}
+          TEAM: pensjonsamhandling
