Replace set-env.

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -21,7 +21,7 @@ jobs:
 
       # Build image
       - name: Create tag
-        run: echo "::set-env name=TAG::$(date "+%Y.%m.%d")-$(git rev-parse --short HEAD)"
+        run: echo "TAG=$(date "+%Y.%m.%d")-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       - name: Build and push docker image
         uses: docker/build-push-action@v1.1.0
         with:
