--- a/.nais/nais-dev.yaml
+++ b/.nais/nais-dev.yaml
@@ -2,7 +2,7 @@ apiVersion: "nais.io/v1alpha1"
 kind: "Application"
 metadata:
   name: pensjon-pol-innsyn-tp
-  namespace: default
+  namespace: pensjonsamhandling
   labels:
     team: pensjonsamhandling
 spec:
