--- a/.nais/nais-prod.yaml
+++ b/.nais/nais-prod.yaml
@@ -10,6 +10,9 @@ spec:
   port: 8080
   ingresses:
     - https://pensjon-pol-innsyn-tp.nais.adeo.no
+  env:
+    - name: SPRING_PROFILES_ACTIVE
+      value: dev
   liveness:
     path: actuator/health/liveness
     initialDelay: 30
