--- a/.nais/nais-prod.yaml
+++ b/.nais/nais-prod.yaml
@@ -12,7 +12,7 @@ spec:
     - https://pensjon-pol-innsyn-tp.nais.adeo.no
   env:
     - name: SPRING_PROFILES_ACTIVE
-      value: dev
+      value: prod
   liveness:
     path: actuator/health/liveness
     initialDelay: 30
