--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,1 +1,2 @@
 tp.url: https://tp-q1.dev.intern.nav.no
+spring.security.oauth2.client.provider.isso.issuer-uri: https://isso-q.adeo.no:443/isso/oauth2
