--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 management:
   endpoint.prometheus.enabled: true
   endpoints.web.exposure.include: prometheus, health
-spring.security.oauth2.client.registration.isso:
-  authorization-grant-type: authorization_code
-  client-id: nais.io/azure/AZURE_APP_CLIENT_ID
-  client-name: ISSO
-  client-secret: nais.io/azure/AZURE_APP_CLIENT_SECRET
-  provider: isso
-  scope: openid
+spring.security.oauth2.client:
+  provider.azure.issuer-uri: ${AZURE_OPENID_CONFIG_ISSUER}
+  registration.azure:
+    authorization-grant-type: authorization_code
+    client-id: ${AZURE_APP_CLIENT_ID}
+    client-name: Azure
+    client-secret: ${AZURE_APP_CLIENT_SECRET}
+    provider: azure
+    scope: openid
