--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,11 @@
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils: DEBUG
-no.nav.security.jwt.issuer.iss-localhost:
-  discoveryUrl: http://localhost/local/metadata
-  accepted_audience: aud-localhost
-  validation.optional_claims: sub,aud
 tp.url: http://localhost:8089
+#spring.security.oauth2.client:
+#  provider.localhost.issuer-uri: https://localhost/oauth2
+#  registration.localhost:
+#    authorization-grant-type: authorization_code
+#    client-id: ${AZURE_APP_CLIENT_ID}
+#    client-name: localhost
+#    client-secret: ${AZURE_APP_CLIENT_SECRET}
+#    provider: localhost
+#    scope: openid
