--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,3 @@
 spring.security.oauth2.client:
   provider.azure.issuer-uri: ${AZURE_OPENID_CONFIG_ISSUER}
-tp.url: https://tp-q1.dev.intern.nav.no
+tp.url: https://tp-api-q1.dev-fss-pub.nais.io
