Use MockOauth2Server

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,11 +1,15 @@
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils: DEBUG
 tp.url: http://localhost:8089
-#spring.security.oauth2.client:
-#  provider.localhost.issuer-uri: https://localhost/oauth2
-#  registration.localhost:
-#    authorization-grant-type: authorization_code
-#    client-id: ${AZURE_APP_CLIENT_ID}
-#    client-name: localhost
-#    client-secret: ${AZURE_APP_CLIENT_SECRET}
-#    provider: localhost
-#    scope: openid
+spring.security.oauth2.client:
+  provider.localhost:
+    authorization-uri: mock-oauth2-server.baseUrl/issuer1/authorize
+    token-uri: mock-oauth2-server.baseUrl/issuer1/token
+    jwk-set-uri: mock-oauth2-server.baseUrl/issuer1/jwks
+  registration.localhost:
+    authorization-grant-type: authorization_code
+    client-id: testclient
+    client-name: localhost
+    client-secret: testsecret
+    provider: localhost
+    scope: openid
+    redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
