Add reply URLs to azure config.

--- a/.nais/nais-prod.yaml
+++ b/.nais/nais-prod.yaml
@@ -13,6 +13,8 @@ spec:
   azure:
     application:
       enabled: true
+      replyURLs:
+        - https://pensjon-pol-innsyn-tp.intern.nav.no/
       claims:
         extra:
           - NAVident
