--- a/.nais/nais-dev.yaml
+++ b/.nais/nais-dev.yaml
@@ -13,6 +13,8 @@ spec:
   azure:
     application:
       enabled: true
+      replyURLs:
+        - https://pensjon-pol-innsyn-tp.dev.intern.nav.no/
       claims:
         extra:
           - NAVident
