--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,4 @@ spring.security.oauth2.client:
     client-secret: ${AZURE_APP_CLIENT_SECRET}
     provider: azure
     scope: openid
+    redirect-uri: "/"
