--- a/.nais/nais-dev.yaml
+++ b/.nais/nais-dev.yaml
@@ -13,8 +13,9 @@ spec:
   azure:
     application:
       enabled: true
+      tenant: nav.no
       replyURLs:
-        - https://pensjon-pol-innsyn-tp.dev.intern.nav.no/
+        - https://pensjon-pol-innsyn-tp.dev.intern.nav.no/login/oauth2/code/azure
       claims:
         extra:
           - NAVident
