Add cluster to tp access policy.

--- a/.nais/nais-dev.yaml
+++ b/.nais/nais-dev.yaml
@@ -14,6 +14,7 @@ spec:
     outbound:
       rules:
         - application: tp-q1
+          cluster: dev-fss
   azure:
     application:
       enabled: true
