--- a/.nais/nais-dev.yaml
+++ b/.nais/nais-dev.yaml
@@ -14,6 +14,7 @@ spec:
     outbound:
       rules:
         - application: tp-q1
+          namespace: pensjonsamhandling
           cluster: dev-fss
   azure:
     application:
