--- a/.nais/nais-prod.yaml
+++ b/.nais/nais-prod.yaml
@@ -14,6 +14,8 @@ spec:
     outbound:
       rules:
         - application: tp
+          namespace: pensjonsamhandling
+          cluster: prod-fss
   azure:
     application:
       enabled: true
