--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -2,7 +2,8 @@ name: Release to GitHub Package Registry
 
 on:
   push:
-    branches: main
+    branches:
+      - main
 
 jobs:
   build_and_release:
@@ -13,7 +14,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
         with:
-          java-version: '16.x'
+          java-version: '17.x'
 
       # Build
       - name: Build
@@ -42,11 +43,11 @@ jobs:
           TEAM: pensjonsamhandling
 
       # Deploy to prod-gcp
-      - name: Deploy to prod-gcp
-        uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-gcp
-          RESOURCE: .nais/nais-prod.yaml
-          IMAGE: docker.pkg.github.com/navikt/pensjon-pol-innsyn-tp/pensjon-pol-innsyn-tp:${{ env.TAG }}
-          TEAM: pensjonsamhandling
+#      - name: Deploy to prod-gcp
+#        uses: nais/deploy/actions/deploy@v1
+#        env:
+#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+#          CLUSTER: prod-gcp
+#          RESOURCE: .nais/nais-prod.yaml
+#          IMAGE: docker.pkg.github.com/navikt/pensjon-pol-innsyn-tp/pensjon-pol-innsyn-tp:${{ env.TAG }}
+#          TEAM: pensjonsamhandling
