--- a/.nais/nais-dev.yaml
+++ b/.nais/nais-dev.yaml
@@ -22,6 +22,8 @@ spec:
       replyURLs:
         - https://pensjon-pol-innsyn-tp.dev.intern.nav.no/login/oauth2/code/azure
       claims:
+        groups:
+          - id: "457e28b8-7bc1-4c84-b5c8-404025dd096a"
         extra:
           - NAVident
   env:
