--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ management:
   endpoint.prometheus.enabled: true
   endpoints.web.exposure.include: prometheus, health
 spring.security.oauth2.client:
+  provider.azure.issuer-uri: ${AZURE_OPENID_CONFIG_ISSUER}
   registration.azure:
-    scope:
-      - "TP_INNSYN"
+    scope: openid, ${tp.scope}
     authorization-grant-type: authorization_code
     client-id: ${AZURE_APP_CLIENT_ID}
     client-name: Azure
