--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,5 +1,7 @@
 logging.level.org.springframework.jdbc.datasource.init.ScriptUtils: DEBUG
-tp.url: http://localhost:8089
+tp:
+  url: http://localhost:8089
+  scope: bogus
 spring.security.oauth2.client:
   provider.azure:
     authorization-uri: test
