Improve oauth2 config.

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,4 +1,4 @@
 tp:
   url: https://tp-api.prod-fss-pub.nais.io
   scope: api://prod-fss.pensjonsamhandling.tp/.default
-
+scope: api://prod-gcp.pensjonsamhandling.pensjon-pol-innsyn-tp/.default
