--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,4 @@
 tp:
   url: https://tp-api-q1.dev-fss-pub.nais.io
   scope: api://dev-fss.pensjonsamhandling.tp-q1/.default
+scope: api://dev-gcp.pensjonsamhandling.pensjon-pol-innsyn-tp/.default
