--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -17,8 +17,11 @@ jobs:
           java-version: '18.x'
 
       # Build
-      - name: Build
-        run: gradle clean build
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: current
+          arguments: build
 
       # Build image
       - name: Create tag
