PES-82: Improve github action granularity.

--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   deployToProd:
-    name: "Deploy tp-api to Prod"
+    name: Deploy to Prod
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
