--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,12 +9,18 @@ jobs:
   build_and_release:
     name: Build and release
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+      checks: write
     steps:
       # Checkout
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v3
         with:
-          java-version: '18.x'
+          distribution: temurin
+          java-version: 20
 
       # Build
       - name: Setup Gradle
