--- a/.nais/nais-prod.yaml
+++ b/.nais/nais-prod.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: pensjonsamhandling
   labels:
     team: pensjonsamhandling
+  annotations:
+    config.linkerd.io/proxy-outbound-connect-timeout: "3s"
 spec:
   image: {{ image }}
   port: 8080
