--- a/.nais/nais-dev.yaml
+++ b/.nais/nais-dev.yaml
@@ -14,10 +14,8 @@ spec:
     - https://pensjon-pol-innsyn-tp.intern.dev.nav.no
   accessPolicy:
     outbound:
-      rules:
-        - application: tp-q1
-          namespace: pensjonsamhandling
-          cluster: dev-fss
+      external:
+        - host: tp-api-q1.dev-fss-pub.nais.io
   azure:
     application:
       enabled: true
