--- a/src/main/resources/application-vtp-pensjon.yml
+++ b/src/main/resources/application-vtp-pensjon.yml
@@ -2,9 +2,11 @@ management:
   endpoint.prometheus.enabled: true
   endpoints.web.exposure.include: prometheus, health
 spring.security.oauth2.client:
-  provider.azure.authorization-uri: http://localhost:8060/rest/AzureAd/vtp-pensjon/v2.0/authorize
-  provider.azure.jwk-set-uri: http://localhost:8060/rest/AzureAd/vtp-pensjon/discovery/v2.0/keys
-  provider.azure.token-uri: http://localhost:8060/rest/AzureAd/vtp-pensjon/oauth2/v2.0/token
+  provider:
+    azure:
+      authorization-uri: http://localhost:8060/rest/AzureAd/vtp-pensjon/v2.0/authorize
+      jwk-set-uri: http://localhost:8060/rest/AzureAd/vtp-pensjon/discovery/v2.0/keys
+      token-uri: http://localhost:8060/rest/AzureAd/vtp-pensjon/oauth2/v2.0/token
   registration.azure:
     authorization-grant-type: authorization_code
     client-id: pol-innsyn
