--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,26 +18,28 @@ jobs:
     steps:
       # Checkout
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
 
       # Build
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: current
-          arguments: build
+        uses: gradle/actions/setup-gradle@v4
+      - name: Build
+        run: ./gradlew build
 
       # Build image
       - name: Create tag
         run: echo "TAG=$(date "+%Y.%m.%d")-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-      - name: Build and push docker image
-        uses: docker/build-push-action@v1.1.0
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          username: token
+          registry: ghcr.io
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: navikt/pensjon-pol-innsyn-tp/pensjon-pol-innsyn-tp
+      - name: Build and push docker image
+        uses: docker/build-push-action@v6
+        with:
+          push: true
           tags: ${{ env.TAG }}
