--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,4 +43,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.TAG }}
+          tags: ghcr.io/${{ github.repository }}:${{ env.TAG }}
