--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,6 +24,8 @@ jobs:
           java-version: 21
 
       # Build
+      - name: Create secure-logs
+        run: mkdir /secure-logs
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
       - name: Build
