Cleanup merge conflicts and build scripts.

--- a/.github/workflows/buildAndDeployMain.yml
+++ b/.github/workflows/buildAndDeployMain.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       # Checkout
       - uses: actions/checkout@v4
-      - name: Java 21
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
           java-version: 21
@@ -24,10 +24,12 @@ jobs:
           cache: gradle
 
       # Build
-      - name: Build
-        run: gradle clean xjc build
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITH_ACCESS_TOKEN }}
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          gradle-version: current
+      - name: Build with Gradle
+        run: gradle build
 
       # Build image
       - name: Nais docker-build
@@ -36,15 +38,6 @@ jobs:
         with:
           team: pensjonsamhandling
           tag: ${{ github.event.repository.name }}-main
-          pull: true
-
-        # Deploy
-      - name: Deploy to dev-gcp
-        uses: nais/deploy/actions/deploy@v2
-        env:
-          CLUSTER: dev-gcp
-          RESOURCE: nais/dev.yaml
-          IMAGE: ${{ steps.docker-push.outputs.image }}
 
       - name: Deploy to prod-gcp
         uses: nais/deploy/actions/deploy@v2
@@ -52,3 +45,4 @@ jobs:
           CLUSTER: prod-gcp
           RESOURCE: nais/prod.yaml
           IMAGE: ${{ steps.docker-push.outputs.image }}
+          TELEMETRY: ${{ steps.docker-build-push.outputs.telemetry }}
