--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,5 +18,7 @@ jobs:
       # Test
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
-      - name: Test
-        run: ./gradlew test
+        with:
+          gradle-version: current
+      - name: Build with Gradle
+        run: gradle test
