--- a/.github/workflows/mergeMainToSandbox.yml
+++ b/.github/workflows/mergeMainToSandbox.yml
@@ -18,6 +18,16 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 20
+      - id: sandbox-exists
+        uses: GuillaumeFalourd/branch-exists@v1.1
+        with:
+          branch: sandbox
+      - if: ${{ !steps.sandbox-exists.outputs.exists }}
+        uses: peterjgrainger/action-create-branch@v2.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          branch: sandbox
       - name: Merge Main to Sandbox
         uses: robotology/gh-action-nightly-merge@v1.5.2
         with:
