--- a/.github/workflows/mergeMainToSandbox.yml
+++ b/.github/workflows/mergeMainToSandbox.yml
@@ -22,7 +22,7 @@ jobs:
         uses: GuillaumeFalourd/branch-exists@v1.1
         with:
           branch: sandbox
-      - if: ${{ !steps.sandbox-exists.outputs.exists }}
+      - if: steps.sandbox-exists.outputs.exists == 'false'
         uses: peterjgrainger/action-create-branch@v2.2.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
