--- a/.github/workflows/mergeMainToSandbox.yml
+++ b/.github/workflows/mergeMainToSandbox.yml
@@ -3,7 +3,7 @@ name: Merge Main to Sandbox
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   merge-main-to-sandbox:
@@ -22,25 +22,59 @@ jobs:
         uses: GuillaumeFalourd/branch-exists@v1.1
         with:
           branch: sandbox
-      - if: steps.sandbox-exists.outputs.exists == 'false'
-        uses: peterjgrainger/action-create-branch@v2.2.0
+      - name: Create sandbox
+        if: steps.sandbox-exists.outputs.exists == 'false'
+        uses: julbme/gh-action-manage-branch@v1
+        with:
+          name: sandbox
+          state: present
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          branch: sandbox
       - name: Merge Main to Sandbox
         uses: robotology/gh-action-nightly-merge@v1.5.2
         with:
-          stable_branch: main
+          stable_branch: master
           development_branch: sandbox
           allow_ff: true
           allow_forks: true
           user_name: GitHub Merge Actions
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  regenerateSandbox:
+    name: Regenerate sandbox
+    runs-on: ubuntu-latest
+    needs:
+      - merge-main-to-sandbox
+    if: failure()
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 20
+      - id: sandbox-exists
+        uses: GuillaumeFalourd/branch-exists@v1.1
+        with:
+          branch: sandbox
+      - name: Delete sandbox
+        if: steps.sandbox-exists.outputs.exists == 'true'
+        uses: julbme/gh-action-manage-branch@v1
+        with:
+          name: sandbox
+          state: absent
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create sandbox
+        uses: peterjgrainger/action-create-branch@v2.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          branch: sandbox
   triggerBuildAndDeploy:
     needs:
       - merge-main-to-sandbox
+      - regenerateSandbox
+    if: always() && (needs.merge-main-to-sandbox.result == 'success' || needs.regenerateSandbox.result == 'success')
     permissions:
       actions: write
     name: Trigger build and deploy
