--- a/nais/dev.yaml
+++ b/nais/dev.yaml
@@ -52,3 +52,7 @@ spec:
   prometheus:
     enabled: true
     path: actuator/prometheus
+  observability:
+    logging:
+      destinations:
+        - id: loki
