--- a/nais/prod.yaml
+++ b/nais/prod.yaml
@@ -54,3 +54,7 @@ spec:
   prometheus:
     enabled: true
     path: actuator/prometheus
+  observability:
+    logging:
+      destinations:
+        - id: loki
